--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.2.0",
+    "framer-motion": "^12.20.1",
     "next": "15.3.4",
     "next-theme-kit": "^0.2.1",
     "react": "^19.0.0",
