--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.2.0",
     "dotenv": "^17.0.0",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.20.1",
     "next": "15.3.4",
     "next-theme-kit": "^0.2.1",
